# VoiceTherapyCompanion

./: .replit  app.py  encryption.key  pyproject.toml  replit.md  requirements.txt
.streamlit/: config.toml
attached_assets/: Pasted-Create-a-full-stack-Python-app-that-uses-VAPI-voice-AI-to-act-as-a-voice-based-therapeutic-assessm-1752360289091_1752360289092.txt  Pasted-You-are-an-expert-level-therapy-session-evaluator-trained-on-the-combined-principles-techniques-an-1752463357319_1752463357321.txt
config/: settings.py
models/: analysis_models.py  session_data.py
services/: analysis_service.py  auth_service.py  google_meet_service.py  multi_assessment_service.py  pdf_service.py  session_manager.py  teams_service.py  transcription_service.py  vapi_service.py  zoom_service.py
sessions/: index.json  session_20250713_055055.enc  session_20250713_061321.enc  session_20250713_061757.enc  session_20250713_170832.enc  session_20250714_011618.enc  session_20250714_011701.enc  session_20250714_011723.enc  session_20250714_014733.enc  session_20250714_015104.enc  session_20250714_031353.enc  session_20250714_031631.enc  session_20250714_031945.enc  session_20250714_034327.enc  session_20250714_034408.enc  session_20250714_034428.enc  session_20250714_034549.enc  session_20250714_034733.enc  session_20250714_034752.enc  session_20250714_034816.enc  session_20250714_034937.enc  session_20250714_040428.enc  session_20250718_181546.enc  session_20250718_194234.enc  session_20250718_194613.enc  session_20250718_194755.enc  session_20250719_001623.enc  session_20250719_225153.enc
(+4 files in other folders)
