[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=45.0.5",
    "google-genai>=1.25.0",
    "matplotlib>=3.10.3",
    "openai>=1.95.1",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "pydub>=0.25.1",
    "pypdf2>=3.0.1",
    "reportlab>=4.4.2",
    "requests>=2.32.4",
    "speechrecognition>=3.14.3",
    "streamlit>=1.46.1",
]
